--- a/Bank.csproj
+++ b/Bank.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddOtdelenia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddOtdelenia.Designer.cs">
+      <DependentUpon>AddOtdelenia.cs</DependentUpon>
+    </Compile>
     <Compile Include="BDDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -64,6 +70,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddOtdelenia.resx">
+      <DependentUpon>AddOtdelenia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
