--- a/Bank.csproj
+++ b/Bank.csproj
@@ -68,6 +68,12 @@
     <Compile Include="DelOtdelenia.Designer.cs">
       <DependentUpon>DelOtdelenia.cs</DependentUpon>
     </Compile>
+    <Compile Include="DelWorker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DelWorker.Designer.cs">
+      <DependentUpon>DelWorker.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditOtdelenia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DelOtdelenia.resx">
       <DependentUpon>DelOtdelenia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DelWorker.resx">
+      <DependentUpon>DelWorker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditOtdelenia.resx">
       <DependentUpon>EditOtdelenia.cs</DependentUpon>
