--- a/BDCONN/Bank/Bank.csproj
+++ b/BDCONN/Bank/Bank.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,13 +56,22 @@
     <Compile Include="fBank.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="fBank.Designer.cs">
+    <Compile Include="fBank.designer.cs">
       <DependentUpon>fBank.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fGeneral.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fGeneral.Designer.cs">
+      <DependentUpon>fGeneral.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fBank.resx">
       <DependentUpon>fBank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fGeneral.resx">
+      <DependentUpon>fGeneral.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
