--- a/BDCONN/Bank/Bank.csproj
+++ b/BDCONN/Bank/Bank.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BDDataSet.cs">
+      <DependentUpon>BDDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="BDDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
